src/test/deca/context/valid/provided/declaration_classe.deca
// Description:
//    Programme minimaliste déclarant une classe.
//
// Resultats:
//    Crée la classe Mouton
//
// Historique:
//    cree le 01/01/2022

{
	public class Mouton{
		String nom;
		int age;
		String couleur;
		public void Mouton(String nom, int age, String couleur){
			this.nom = nom;
			this.age = age;
			this.couleur = couleur;
		}
	}

}
